// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "google/protobuf/empty.proto";

import "repr/src/global_id.proto";

package mz_storage_types.sources.envelope;

message ProtoSourceEnvelope {
    reserved 2;
    oneof kind {
        ProtoNoneEnvelope none = 1;
        ProtoUpsertEnvelope upsert = 3;
        google.protobuf.Empty cdc_v2 = 4;
    }
}

message ProtoNoneEnvelope {
    reserved 2;
    ProtoKeyEnvelope key_envelope = 1;
    bool flatten_value = 3;
}

message ProtoKeyEnvelope {
    reserved 1, 2, 3;
    message ProtoKeyEnvelopeFlattened {
        uint64 key_arity = 1;
    }
    message ProtoKeyEnvelopeNamed {
        string name = 1;
        bool flatten = 2;
    }
    oneof kind {
        ProtoKeyEnvelopeFlattened flattened = 4;
        ProtoKeyEnvelopeNamed named = 5;
    }
}

message ProtoUpsertEnvelope {
    reserved 3, 4;
    ProtoUpsertStyle style = 1;
    repeated uint64 key_indices = 2;
    bool flatten_value = 5;
}

message ProtoUpsertStyle {
    message ProtoDebezium {
        uint64 after_idx = 1;
    }

    oneof kind {
        ProtoKeyEnvelope default = 1;
        ProtoDebezium debezium = 2;
    }
}
